# turbobadger

./: .gitignore  CMakeLists.txt
Demo/: CMakeLists.txt
Demo/platform/: port_glfw.cpp
resources/default_skin/: skin.tb.txt
src/tb/: CMakeLists.txt  tb_bitmap_fragment.cpp  tb_bitmap_fragment.h  tb_config.h  tb_editfield.cpp  tb_editfield.h  tb_function.h  tb_inline_select.h  tb_layout.cpp  tb_menu_window.cpp  tb_renderer.h  tb_select.cpp  tb_select.h  tb_select_item.cpp  tb_skin.cpp  tb_skin.h  tb_style_edit.cpp  tb_style_edit.h  tb_system.h  tb_system_android.cpp  tb_system_linux.cpp  tb_system_mac.cpp  tb_system_mac.mm  tb_system_win.cpp  tb_tab_container.cpp  tb_widgets.cpp  tb_widgets.h  tb_widgets_reader.cpp  tb_widgets_reader.h  tb_window.cpp  tb_window.h
src/tb/animation/: tb_widget_animation.cpp  tb_widget_animation.h
src/tb/image/: tb_image_manager.cpp  tb_image_manager.h  tb_image_widget.cpp  tb_image_widget.h
src/tb/renderers/: tb_renderer_batcher.cpp  tb_renderer_batcher.h  tb_renderer_gl.cpp  tb_renderer_gl.h
